# homebrewer

./: Cargo.toml
.github/workflows/: rust.yml
example/: homebrewer.toml
src/: direnv.rs  init.rs  install.rs  main.rs  model.rs  project_template.toml  run.rs  run_as.rs  ser.rs  service.rs  shell.rs  utils.rs
