[package]
name = "brewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = { version = "0" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "signal", "io-std", "io-util", "macros", "time"] }
tokio-util = "0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
exec = "0"
lazy_static = "1"
derive_more = "0"
indexmap = { version = "1", features = ["serde-1"] }
tinytemplate = "1"
itertools = "0"
maplit = "1"
tempfile = "3"
nix = "0"
futures = "0"